--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,45 @@
 .App {
   text-align: center;
-}
-
-
-.App-header {
-  background-color: aqua;
-  display: flex;
-  flex-direction: rows;
-
-  min-height: 100vh;
-  display: flex;
+  background-color:blanchedalmond;
   margin: 0 auto;
+  
+display: flex;
+width: 95%;
+
+
+font-size: calc(10px + 2vmin);
+
+
+}
+
+
+
+#left{
+  background-color: blanchedalmond;
+  width: 40%;
+
+  height: 100vh;
  
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-
-  width: 90vw;
+  grid-area: left;
+ 
 }
+#right{
+  background-color:blanchedalmond;
+  border: 1px solid grey;
 
-.App-link {
-  color: #61dafb;
+  width:60%;
+  height: 100vh;
+  grid-area: right;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.butt{
+  width: 100%;
+  height: 50px;
+  margin: 2px;
+ 
+ 
+}
+#child{
+  height: 299px;
+  width: 299px;
+  background-color:cadetblue;
 }
